--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -28,4 +28,8 @@ jobs:
 
     - name: Run test
       run: |
-        python3 app_test.py
+        python -m coverage run -m app_test 
+
+    - name: Relatorio
+      run: |
+         python -m coverage -m report
