--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
+
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
@@ -50,3 +50,6 @@ jobs:
         context: .
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/app_python:latest
+    - name: Create and start container
+      run: |
+        docker run -d --name app_python -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/app_python:latest
