--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -34,22 +34,32 @@ jobs:
       run: |
          python -m coverage report
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+    # - name: Log in to Docker Hub
+    #   uses: docker/login-action@v2
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@v4
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: ${{ secrets.DOCKER_USERNAME }}/app_python:latest
+    # - name: Create and start container
+    #   run: |
+    #     docker run -d --name app_python -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/app_python:latest
+   
+    - name: Render Deploy Action
+      uses: johnbeynon/render-deploy-action@v0.0.8
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        service-id: srv-crddqo3tq21c73d2d5dg
+        api-key: rnd_w74V68Ke8FW8mHRdLycfio1aqMvv
+          
 
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/app_python:latest
-    - name: Create and start container
-      run: |
-        docker run -d --name app_python -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/app_python:latest
+        
